# docker-opa

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.yaml  makefile.sh
.github/workflows/: create_release.yaml  release.yaml  release_tags.yaml
configs/: acl.rego  config.toml  config.yaml  input.json  kratos_payload.json
examples/: data.json  example.rego  example.rego.old1  example.rego.old2  input.json.old2  kratos_payload.json
kratos/: dmgp.schema.json  kratos.yml  organization.schema.json  person.schema.json  scope.schema.json
kratos/test/: testorg  testperson  testperson_ko_doublon  testscope
src/: config.rs  controller.rs  error.rs  handler.rs  main.rs  router.rs
src/controller/: post.rs
src/middleware/: grpchttp2_guard.rs  id.rs  logger.rs  mod.rs  payload_guard.rs  ping_guard.rs  resthttp1_guard.rs  timer.rs
src/proto/: openpolicyagency.proto
src/types/: input.rs  kratos.rs  mod.rs  opa.rs  opadata.rs  result.rs
src/utils/: error.rs  error_catcher.rs  grpc.rs  http.rs  kafka.rs  kratos.rs  logger.rs  mod.rs  rocket_anyhow.rs  secret.rs  telemetry.rs
tests/: config.toml
