[package]
name = "opa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
httpmock = "0.6.*"
atty = "0.2"

[dependencies]
tokio = {version = "1.32.*", features = ["rt-multi-thread"]}
rocket = {version = "0.5.0-rc", features = ["json"]}
futures = "0.3.*"
reqwest = {version = "0.11.*", features = ["json"]}
thiserror = "1.0.*"
anyhow = "1.0.*"
once_cell = "1.18.*"
log = "0.4.*"
fern = "0.6.*"
chrono = {version = "0.4.*", features = ["serde"]}
uuid = {version = "1.4.*", features = ["v4"]}
notify = "6.0.*"
figment = {version = "0.10.*", features = ["yaml"]}
opentelemetry = "0.17.*"
prometheus = "0.13.*"
opentelemetry-prometheus = "0.10.*"
rs-utils = {git = "https://github.com/w6d-io/rs-utils"}
libkafka = {git = "https://github.com/w6d-io/libkafka", branch = "develop"}
serde = "1.0"
serde_json = "1.0"
opa-wasm = {git = "https://github.com/nhaquet-w6d/rust-opa-wasm"}
wasmtime = "12.0.*"
opa-go = {git = "https://github.com/w6d-io/rs-opa"}
base64 = "0.13.0"
