[package]
name = "opa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
httpmock = "0.6.*"
atty = "0.2"

[dependencies]
tokio = {version = "1.35.*", features = ["rt-multi-thread"]}
futures = "0.3.*"
reqwest = {version = "0.11.*", features = ["json"]}
thiserror = "1.0.*"
anyhow = "1.0.*"
fern = "0.6.*"
uuid = {version = "1.6.*", features = ["v4"]}
notify = "6.1.*"
figment = {version = "0.10.*", features = ["yaml"]}
opentelemetry = "0.17.*"
prometheus = "0.13.*"
opentelemetry-prometheus = "0.10.*"
serde = "1.0"
serde_json = {version = "1.0", features = ["raw_value"]}
base64 = "0.13.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
axum = { version = "0.6.*", features = ["query"] }
axum-macros = "0.3.8"
tower-http = { version = "0.4.4", features = ["request-id"] }
stream-cancel = "0.8.1"
hyper = "0.14.7"
regorus = {git = "https://github.com/microsoft/regorus"}
rs-utils = {git = "https://github.com/w6d-io/rs-utils"}
libkafka = {git = "https://github.com/w6d-io/libkafka", branch = "develop"}
