[package]
name = "opa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
httpmock = "0.7.*"

[dependencies]
tokio = { version = "1.38.*", features = ["rt-multi-thread", "signal"] }
futures = "0.3.*"
reqwest = {version = "0.12.*", features = ["json"]}
thiserror = "1.0.*"
anyhow = "1.0.*"
fern = "0.6.*"
uuid = {version = "1.8.*", features = ["v4"]}
notify = "6.1.*"
figment = {version = "0.10.*", features = ["toml"]}
opentelemetry = "0.23.*"
prometheus = "0.13.*"
opentelemetry-prometheus = "0.16.*"
serde = "1.0"
serde_json = {version = "1.0", features = ["raw_value"]}
base64 = "0.13.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
axum = { version = "0.7.*", features = ["query"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["request-id"] }
stream-cancel = "0.8.1"
hyper = "1.3.1"
regorus = { version = "0.2.0" , features = ["coverage"] }
rs-utils = {git = "https://github.com/w6d-io/rs-utils", default-features = false, features = ["kratos"]}
libkafka = {git = "https://github.com/w6d-io/libkafka", branch = "develop"}
